<resources>
    <string name="app_name">Gas</string>
    <string name="action_settings">Settings</string>
    <string name="main_title">Input Data</string>
    <string name="dist_label">Distance</string>
    <string name="gas_label">Gas</string>
    <string name="date_label">Date</string>
    <string name="debug_button">Print Values</string>
    <string name="display_button">Display</string>
    <string name="input_button">Input</string>
</resources>
